# hopsakee-server

./: .env.example  .example.env  .gitignore  IMPROVEMENTS.md  README.md  TODO.md  amp-changes.md  example.env  pyproject.toml  test.ipynb
config/: settings.yaml  tps_cloud_init.yaml
config/authelia/: .gitignore  compose.yaml  configuration.yml
config/caddy/: compose.yaml
config/caddy/conf/: Caddyfile
config/infoflow/: .compose.yaml.swp  compose.yaml
config/pkw-web/: compose.yaml
server_setup/: __init__.py  client-deploy.sh  deploy-authelia.sh  deploy-caddy.sh  deploy-infoflow.sh  deploy-pkwweb.sh  deploy.sh  helpers.py  hopserver.py  redeploy.sh  server-deploy.sh  server.py  utils.sh
